# build_lite

./: .gitignore  BUILD.gn  README.md  README_zh.md  build.py  build_ext_components.py  bundle.json  compile.py  config.ini  config.py  gen_rootfs.py  hap_pack.py  ohos_var.gni  run_shell_cmd.py  setup.py
components/: aafwk.json  ace.json  ai.json  appexecfwk.json  applications.json  communication.json  distributed_schedule.json  distributeddatamgr.json  distributedhardware.json  distributedschedule.json  drivers.json  global.json  graphic.json  hdf.json  hiviewdfx.json  iot.json  iot_hardware.json  kernel.json  multimedia.json  pms.json  powermgr.json  security.json  sensors.json  startup.json  test.json  update.json  utils.json  vendor.json  xts.json
components/ohos_builds/ace/: ohos.build
components/ohos_builds/appexecfwk/: ohos.build
components/ohos_builds/communication/: ohos.build
components/ohos_builds/distributeddatamgr/: ohos.build
components/ohos_builds/distributedhardware/: ohos.build
components/ohos_builds/global/: ohos.build
components/ohos_builds/graphic/: ohos.build
components/ohos_builds/hdf/: ohos.build
components/ohos_builds/hiviewdfx/: ohos.build
components/ohos_builds/kernel/: ohos.build
components/ohos_builds/powermgr/: ohos.build
components/ohos_builds/security/: ohos.build
components/ohos_builds/sensors/: ohos.build
components/ohos_builds/startup/: ohos.build
components/ohos_builds/updater/: ohos.build
components/ohos_builds/utils/: ohos.build
components/ohos_builds/xts/: ohos.build
config/: BUILD.gn  BUILDCONFIG.gn  hap_pack.gni  test.gni
config/component/: lite_component.gni
config/component/cJSON/: BUILD.gn
config/component/openssl/: BUILD.gn
config/component/zlib/: BUILD.gn
config/kernel/liteos/cortex_m/: BUILD.gn
config/subsystem/aafwk/: config.gni  path.gni
config/subsystem/graphic/: config.gni
config/subsystem/multimedia/: config.gni
config/test/: test.gni
config/toolchain/: config.gni
hb/: __entry__.py  __init__.py  __main__.py
hb/common/: config.py  device.py  product.py  utils.py
hb/cts/: common.py  cts.py  list.py  menuconfig.py
hb/env/: env.py
hb/set/: set.py
hb_internal/: hb_command_set.json
hb_internal/common/: config.py  misc.py  product.py  utils.py
hb_internal/cts/: common.py  cts.py  menuconfig.py
hb_internal/env/: env.py
hb_internal/preloader/: parse_vendor_product_config.py  preloader.py
hb_internal/set/: set.py
hb_internal/tool/: tool.py
make_rootfs/: rootfsimg_linux.sh  rootfsimg_liteos.sh
ndk/: BUILD.gn  README.md  ndk.gni
ndk/doc/config/: Doxyfile_C  Doxyfile_CPP
platform/hi3516dv300_liteos_a/: platform.json
platform/hi3518ev300_liteos_a/: platform.json
platform/hi3861v100_liteos_m/: platform.json
product/: ipcamera_hi3516dv300.json  ipcamera_hi3518ev300.json  qemu_arm_virt_ca7.json  wifiiot.json
testfwk/: lite_testcase_resource_copy.py
toolchain/: BUILD.gn  clang.gni  gcc.gni  iccarm.gni  iccarm_link_helper.sh
